--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ '*' ]
   pull_request:
-    branches: [ Drone ]
+    branches: [ Drone3 ]
   release:
     types: [ created ]
 
@@ -19,21 +19,23 @@ jobs:
           echo "Building the image..."
           docker run --privileged --rm -v /dev:/dev -v $(pwd):/builder/repo -e TRAVIS_TAG="${{ github.event.release.tag_name }}" sfalexrog/img-tool:qemu-update
 
-      - name: Rename file
+      - name: Find and rename file
         run: |
-          echo "Renaming the file..."
-          mv images/clover.zip images/drone.zip
+          file_path=$(find . -type f -name 'clover.zip')
+          if [ -n "$file_path" ]; then
+            echo "File found at: $file_path"
+            mv "$file_path" "$(dirname "$file_path")/drone.zip"
+            echo "File renamed to drone.zip"
+          else
+            echo "File 'clover.zip' not found."
+          fi
+
+      - name: Check files in images directory
+        run: |
+          echo "Files in images directory:"
+          ls -l images
 
       - name: Compress image
         run: |
           echo "Compressing the image..."
           cd images && sudo chmod -R 777 . && zip -9 drone.zip drone_* && ls -l . && unzip -l drone.zip
-
-      - name: Upload image
-        uses: softprops/action-gh-release@v1
-        if: ${{ github.event_name == 'release' }}
-        with:
-          files: images/drone.zip
-          prerelease: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
