--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -16,9 +16,9 @@ jobs:
       - name: Build image
         run: |
           docker run --privileged --rm -v /dev:/dev -v $(pwd):/builder/repo -e TRAVIS_TAG="${{ github.event.release.tag_name }}" sfalexrog/img-tool:qemu-update
-      - name: Compress image
+      - name: Rename and Compress image
         run: |
-          cd images && sudo chmod -R 777 . && zip -9 drone.zip clover* && ls -l . && unzip -l drone.zip
+          cd images && sudo chmod -R 777 . && find . -type f -name 'clover*.img' -exec sh -c 'mv "$1" "${1/clover/drone}"' _ {} \; && zip -9 drone.zip drone* && ls -l . && unzip -l drone.zip
       - name: Upload image
         uses: softprops/action-gh-release@v1
         if: ${{ github.event_name == 'release' }}
