--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -18,7 +18,16 @@ jobs:
           docker run --privileged --rm -v /dev:/dev -v $(pwd):/builder/repo -e TRAVIS_TAG="${{ github.event.release.tag_name }}" sfalexrog/img-tool:qemu-update
       - name: Rename and Compress image
         run: |
-          cd images && sudo chmod -R 777 . && find . -type f -name 'clover*.img' -exec sed -i 's/clover/drone/' {} \; && zip -9 drone.zip drone* && ls -l . && unzip -l drone.zip
+          cd images && sudo chmod -R 777 . && find . -type f -name 'clover*.img' -exec sh -c 'mv "$1" "$(dirname "$1")/$(basename "$1" | sed s/clover/drone/)"' _ {} \; && zip -9 drone.zip drone* && ls -l . && unzip -l drone.zip
+      - name: Rename image in drone.zip
+        run: |
+          cd images
+          unzip -q drone.zip -d tmp_drone_unzip
+          find tmp_drone_unzip -type f -name 'clover*.img' -exec sh -c 'mv "$1" "$(dirname "$1")/$(basename "$1" | sed s/clover/drone/)"' _ {} \;
+          zip -r drone_updated.zip tmp_drone_unzip
+          mv drone_updated.zip drone.zip
+          rm -rf tmp_drone_unzip
+          ls -l . && unzip -l drone.zip
       - name: Upload image
         uses: softprops/action-gh-release@v1
         if: ${{ github.event_name == 'release' }}
@@ -27,3 +36,4 @@ jobs:
           prerelease: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
