--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -16,14 +16,14 @@ jobs:
       - name: Build image
         run: |
           docker run --privileged --rm -v /dev:/dev -v $(pwd):/builder/repo -e TRAVIS_TAG="${{ github.event.release.tag_name }}" sfalexrog/img-tool:qemu-update
-      - name: Compress image
+      - name: Rename and Compress image
         run: |
-          cd images && sudo chmod -R 777 . && zip -9 $(echo clover_*).zip clover_* && ls -l . && unzip -l clover_*.zip
+          cd images && sudo chmod -R 777 . && find . -type f -name 'clover*.img' -exec sh -c 'mv "$1" "$(dirname "$1")/$(basename "$1" | sed s/clover/drone/)"' _ {} \; && zip -9 drone.zip drone* && ls -l . && unzip -l drone.zip
       - name: Upload image
         uses: softprops/action-gh-release@v1
         if: ${{ github.event_name == 'release' }}
         with:
-          files: images/clover_*.zip
+          files: images/drone_*.zip
           prerelease: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
