--- a/drone_blocks/package.xml
+++ b/drone_blocks/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>clover_blocks</name>
+  <name>drone_blocks</name>
   <version>0.24.0</version>
   <description>Blockly programming support for Clover</description>
   <maintainer email="okalachev@gmail.com">Oleg Kalachev</maintainer>
