--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -55,11 +55,14 @@ jobs:
           rm _book/drone_ru.pdf && mv _book/drone_ru_compressed.pdf _book/drone_ru.pdf
           ls -lah _book/drone*.pdf
           echo '::set-output name=GITBOOK_PDF_OK::1'
-      - name: Upload artifact
-        # if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/final-master' }}
-        uses: actions/upload-pages-artifact@v1
+      - name: Upload PDF artifact
+        uses: softprops/action-gh-release@v1
         with:
-          path: _book
+          files: _book/drone*.pdf
+          prerelease: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   deploy-docs:
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/final-master' }}
     concurrency:
