--- a/.github/workflows/upload-pdf.yml
+++ b/.github/workflows/upload-pdf.yml
@@ -1,26 +1,26 @@
 name: Upload PDF to Release
 
 on:
-    push:
-      branches: [ '*' ]
-    pull_request:
-      branches: [ final-master ]
-    release:
-      types: [ created ]
+  release:
+    types: [ created ]
 
 jobs:
-  upload-pdf:
+  upload-pdf-to-release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+
+      - name: Find PDF files
+        run: |
+          pdf_files=$(find ./_book -type f -name "drone*.pdf")
+          echo "PDF files found: $pdf_files"
 
       - name: Upload PDF to release
         run: |
           release_id=$(curl -sSL -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             "https://api.github.com/repos/${{ github.repository }}/releases/tags/PDF" | jq -r '.id')
 
-          pdf_files=$(find ./_book -type f -name "drone*.pdf")
           for pdf_file in $pdf_files; do
             echo "Uploading $pdf_file to release"
             curl -sSL -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
