--- a/.github/workflows/upload-pdf.yml
+++ b/.github/workflows/upload-pdf.yml
@@ -1,11 +1,11 @@
-name: Upload PDF to Release
+name: Upload PDF to Latest Release
 
 on:
   release:
     types: [ created ]
 
 jobs:
-  upload-pdf-to-release:
+  upload-pdf-to-latest-release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -16,13 +16,14 @@ jobs:
           pdf_files=$(find ./_book -type f -name "drone*.pdf")
           echo "PDF files found: $pdf_files"
 
-      - name: Upload PDF to release
+      - name: Upload PDF to latest release
         run: |
+          # Get the latest release ID
           release_id=$(curl -sSL -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            "https://api.github.com/repos/${{ github.repository }}/releases/tags/PDF" | jq -r '.id')
+            "https://api.github.com/repos/${{ github.repository }}/releases/latest" | jq -r '.id')
 
           for pdf_file in $pdf_files; do
-            echo "Uploading $pdf_file to release"
+            echo "Uploading $pdf_file to latest release"
             curl -sSL -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
               -H "Content-Type: application/zip" \
               --data-binary "@$pdf_file" \
