--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -53,19 +53,21 @@ jobs:
         run: |
           pdf_files=$(find ./_book -type f -name "drone*.pdf")
           echo "PDF files found: $pdf_files"
+          echo "::set-output name=pdf_files::${pdf_files}"
 
   upload-pdf:
     runs-on: ubuntu-latest
     needs: docs
     outputs:
       id: ${{ needs.docs.outputs.id }}
+      pdf_files: ${{ needs.docs.outputs.pdf_files }}
     steps:
       - name: Upload PDF to release
         run: |
           release_id=$(curl -sSL -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            "https://api.github.com/repos/${{ github.repository }}/releases/tags/PDF" | jq -r '.id')
+            "https://api.github.com/repos/${{ github.repository }}/releases/latest" | jq -r '.id')
 
-          for pdf_file in $pdf_files; do
+          for pdf_file in ${{ needs.upload-pdf.outputs.pdf_files }}; do
             echo "Uploading $pdf_file to release"
             curl -sSL -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
               -H "Content-Type: application/zip" \
