--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,11 +6,18 @@ on:
   pull_request:
     branches: [ '*' ]
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+defaults:
+  run:
+    shell: bash
+
 jobs:
   docs:
     runs-on: ubuntu-22.04
-    outputs:
-      id: ${{ needs.docs.outputs.id }}
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js
@@ -21,7 +28,7 @@ jobs:
           sudo sh -c "echo ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true | debconf-set-selections"
           sudo apt-get update && sudo apt-get install -y calibre msttcorefonts
           builder/assets/install_gitbook.sh
-          npm install markdownlint-cli@0.28.1 -g
+          npm install markdownlint-cli@0.28.1 -g # FIXME: https://github.com/DavidAnson/markdownlint/issues/435
           npm install svgexport -g
           gitbook -V
           markdownlint -V
@@ -33,8 +40,8 @@ jobs:
           ./check_unused_assets.py
       - name: Build GitBook
         run: |
-          gitbook install
-          gitbook build
+         gitbook install
+         gitbook build
       - name: Generate PDF
         id: generate-pdf
         env:
@@ -45,42 +52,22 @@ jobs:
           for i in 1 2 3 4; do gitbook pdf ./ _book/drone.pdf && break || sleep 1; done
           sudo apt-get -q install ghostscript
           gs -sDEVICE=pdfwrite -dCompatibilityLevel=1.4 -dPDFSETTINGS=/default -dNOPAUSE -dQUIET -dBATCH -dDetectDuplicateImages -dCompressFonts=true -r150 -sOutputFile=_book/drone_ru_compressed.pdf _book/drone_ru.pdf
+          gs -sDEVICE=pdfwrite -dCompatibilityLevel=1.4 -dPDFSETTINGS=/default -dNOPAUSE -dQUIET -dBATCH -dDetectDuplicateImages -dCompressFonts=true -r150 -sOutputFile=_book/drone_en_compressed.pdf _book/drone_en.pdf
           rm _book/drone_ru.pdf && mv _book/drone_ru_compressed.pdf _book/drone_ru.pdf
+          rm _book/drone_en.pdf && mv _book/drone_en_compressed.pdf _book/drone_en.pdf
           ls -lah _book/drone*.pdf
-          echo -e "\033[33m::set-output name=GITBOOK_PDF_OK::1\033[0m"  # Yellow text
-
+          echo '::set-output name=GITBOOK_PDF_OK::1'
+      - name: Upload artifact
+        # if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/final-master' }}
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: _book
       - name: Find PDF files
         id: find-pdf
         run: |
           pdf_files=$(find ./_book -type f -name "drone*.pdf")
           echo -e "\033[32mPDF files found: $pdf_files\033[0m"  # Green text
           echo -e "\033[34m::set-output name=pdf_files::${pdf_files}\033[0m"  # Blue text
-
-  upload-pdf:
-    runs-on: ubuntu-latest
-    needs: docs
-    outputs:
-      id: ${{ needs.docs.outputs.id }}
-      pdf_files: ${{ needs.docs.outputs.pdf_files }}
-    steps:
-      - name: Debug info
-        run: |
-          echo -e "\033[34mpdf_files from upload-pdf: ${{ needs.docs.outputs.pdf_files }}\033[0m"  # Blue text
-      - name: Upload PDF to release
-        run: |
-          release_id=$(curl -sSL -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            "https://api.github.com/repos/${{ github.repository }}/releases/latest" | jq -r '.id')
-
-          echo -e "\033[32mRelease ID for latest release: $release_id\033[0m"  # Green text
-
-          for pdf_file in ${{ needs.upload-pdf.outputs.pdf_files }}; do
-            echo -e "\033[36mUploading $pdf_file to release\033[0m"  # Cyan text
-            curl -sSL -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-              -H "Content-Type: application/zip" \
-              --data-binary "@$pdf_file" \
-              "https://uploads.github.com/repos/${{ github.repository }}/releases/$release_id/assets?name=$(basename $pdf_file)"
-          done
-
   deploy-docs:
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/final-master' }}
     concurrency:
@@ -88,9 +75,9 @@ jobs:
         cancel-in-progress: true
     environment:
       name: github-pages
-      url: ${{ needs.docs.outputs.url }}
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: [docs, upload-pdf]
+    needs: docs
     steps:
       - name: Deploy to GitHub Pages
         env:
