--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches: [ '*' ]
   pull_request:
-    branches: [ '*' ]
+    branches: [ final-master ]
+  release:
+    types: [ created ]
 
 permissions:
   contents: read
@@ -52,9 +54,7 @@ jobs:
           for i in 1 2 3 4; do gitbook pdf ./ _book/drone.pdf && break || sleep 1; done
           sudo apt-get -q install ghostscript
           gs -sDEVICE=pdfwrite -dCompatibilityLevel=1.4 -dPDFSETTINGS=/default -dNOPAUSE -dQUIET -dBATCH -dDetectDuplicateImages -dCompressFonts=true -r150 -sOutputFile=_book/drone_ru_compressed.pdf _book/drone_ru.pdf
-          gs -sDEVICE=pdfwrite -dCompatibilityLevel=1.4 -dPDFSETTINGS=/default -dNOPAUSE -dQUIET -dBATCH -dDetectDuplicateImages -dCompressFonts=true -r150 -sOutputFile=_book/drone_en_compressed.pdf _book/drone_en.pdf
           rm _book/drone_ru.pdf && mv _book/drone_ru_compressed.pdf _book/drone_ru.pdf
-          rm _book/drone_en.pdf && mv _book/drone_en_compressed.pdf _book/drone_en.pdf
           ls -lah _book/drone*.pdf
           echo '::set-output name=GITBOOK_PDF_OK::1'
       - name: Upload artifact
@@ -63,11 +63,17 @@ jobs:
         with:
           path: _book
       - name: Find PDF files
-        id: find-pdf
         run: |
           pdf_files=$(find ./_book -type f -name "drone*.pdf")
-          echo -e "\033[32mPDF files found: $pdf_files\033[0m"  # Green text
-          echo -e "\033[34m::set-output name=pdf_files::${pdf_files}\033[0m"  # Blue text
+          echo "PDF files found: $pdf_files"
+      - name: Upload image
+        uses: softprops/action-gh-release@v1
+        if: ${{ github.event_name == 'release' }}
+        with:
+          files: pdf_files
+          prerelease: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   deploy-docs:
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/final-master' }}
     concurrency:
