--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -54,6 +54,12 @@ jobs:
           ls -lah _book/drone*.pdf
           echo "::set-output name=pdf_files::$(find ./_book -type f -name 'drone*.pdf')"
 
+      - name: Find PDF files
+        run: |
+          pdf_files=$(find ./_book -type f -name "drone*.pdf")
+          echo "PDF files found: $pdf_files"
+          echo "::set-output name=pdf_files::$pdf_files"
+
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
