--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -65,19 +65,15 @@ jobs:
           echo "PDF files found: $pdf_files"
           echo "::set-output name=pdf_files::$pdf_files"
 
-      - name: Use PDF files
+      - name: Upload PDFs to Release
         run: |
-            pdf_files=./_book/drone_ru.pdf
-            echo "PDF files to upload: $pdf_files"
+          pdf_files="${{ needs.docs.outputs.pdf_files }}"
+          release_id=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ github.event.release.tag_name }}" | jq -r '.id')
 
-      - name: Upload PDF
-        uses: softprops/action-gh-release@v1
-        if: ${{ github.event_name == 'release' }}
-        with:
-          files: ./_book/drone_ru.pdf
-          prerelease: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          for pdf_file in $pdf_files; do
+            echo "Uploading $pdf_file to Release #$release_id"
+            curl -s -X POST -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" -H "Content-Type: application/octet-stream" --data-binary "@$pdf_file" "https://uploads.github.com/repos/${{ github.repository }}/releases/$release_id/assets?name=$(basename $pdf_file)"
+          done
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
