--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -59,15 +59,31 @@ jobs:
           ls -lah _book/drone*.pdf
           echo "::set-output name=pdf_files::$(find ./_book -type f -name 'drone*.pdf')"
 
-      - name: Find PDF files
+          - name: Find PDF files
+          id: find-pdf
+          run: |
+            pdf_files=$(find ./_book -type f -name "drone*.pdf")
+            echo "PDF files found: $pdf_files"
+            echo "::set-output name=pdf_files::$pdf_files"
+  
+      - name: Check PDF files
         run: |
-          pdf_files=$(find ./_book -type f -name "drone*.pdf")
-          echo "PDF files found: $pdf_files"
-          echo "::set-output name=pdf_files::$pdf_files"
+          pdf_files="${{ steps.find-pdf.outputs.pdf_files }}"
+          for pdf_file in $pdf_files; do
+            if [ ! -f "$pdf_file" ]; then
+              echo "Error: File $pdf_file not found!"
+              exit 1
+            fi
+            if [ ! -s "$pdf_file" ]; then
+              echo "Error: File $pdf_file is empty!"
+              exit 1
+            fi
+            echo "File $pdf_file exists and has size: $(du -h $pdf_file | cut -f1)"
+          done
 
       - name: Upload PDFs to Release
         run: |
-          pdf_files="${{ needs.docs.outputs.pdf_files }}"
+          pdf_files="${{ steps.find-pdf.outputs.pdf_files }}"
           release_id=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ github.event.release.tag_name }}" | jq -r '.id')
 
           for pdf_file in $pdf_files; do
