--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ '*' ]
   pull_request:
-    branches: [ final-master ]
+    branches: [ final-master2 ]
 
 jobs:
   # melodic:
