--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,9 +4,7 @@ on:
   push:
     branches: [ '*' ]
   pull_request:
-    branches: [ final-master ]
-  release:
-    types: [ created ]
+    branches: [ '*' ]
 
 permissions:
   contents: read
@@ -20,8 +18,6 @@ defaults:
 jobs:
   docs:
     runs-on: ubuntu-22.04
-    outputs:
-      id: docs_outputs
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js
@@ -51,6 +47,7 @@ jobs:
         env:
           GITBOOK_SKIP_PDF: ${{ secrets.GITBOOK_SKIP_PDF }}
         continue-on-error: ${{ env.GITBOOK_SKIP_PDF != '' }}
+        if: ${{ github.event_name == 'push' }}
         run: |
           for i in 1 2 3 4; do gitbook pdf ./ _book/drone.pdf && break || sleep 1; done
           sudo apt-get -q install ghostscript
@@ -58,48 +55,19 @@ jobs:
           rm _book/drone_ru.pdf && mv _book/drone_ru_compressed.pdf _book/drone_ru.pdf
           ls -lah _book/drone*.pdf
           echo '::set-output name=GITBOOK_PDF_OK::1'
-          echo "::set-output name=pdf_files::$(find ./_book -type f -name 'drone*.pdf')"
-
-      - name: Find PDF files
-        id: find-pdf
+      - name: Download older PDFs
+        if: ${{ !steps.generate-pdf.outputs.GITBOOK_PDF_OK }}
         run: |
-          pdf_files=$(find ./_book -type f -name "drone*.pdf")
-          echo "PDF files found: $pdf_files"
-          echo "::set-output name=pdf_files::$pdf_files"
-  
-      - name: Check PDF files
-        run: |
-          pdf_files="${{ steps.find-pdf.outputs.pdf_files }}"
-          for pdf_file in $pdf_files; do
-            if [ ! -f "$pdf_file" ]; then
-              echo "Error: File $pdf_file not found!"
-              exit 1
-            fi
-            if [ ! -s "$pdf_file" ]; then
-              echo "Error: File $pdf_file is empty!"
-              exit 1
-            fi
-            echo "File $pdf_file exists and has size: $(du -h $pdf_file | cut -f1)"
-          done
-
-      - name: Upload PDFs to Release
-        if: ${{ github.event_name == 'release' }}
-        run: |
-          pdf_files="${{ steps.find-pdf.outputs.pdf_files }}"
-          release_tag="${{ github.event.release.tag_name }}"
-          release_id=$(curl -s -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" "https://api.github.com/repos/arutofu/drone/releases/tags/$release_tag" | jq -r '.id')
-      
-          for pdf_file in $pdf_files; do
-            echo "Uploading $pdf_file to Release #$release_id"
-            curl -s -X POST -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" -H "Content-Type: application/octet-stream" --data-binary "@$pdf_file" "https://uploads.github.com/repos/arutofu/drone/releases/$release_id/assets?name=$(basename $pdf_file)"
-          done
-
+          rm -f _book/drone*.pdf
+          wget --no-verbose https://clover.coex.tech/clover_ru.pdf -P _book/
       - name: Upload artifact
+        # if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
         uses: actions/upload-pages-artifact@v1
         with:
           path: _book
 
   deploy-docs:
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
     concurrency:
         group: "pages"
         cancel-in-progress: true
