--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -48,7 +48,15 @@ jobs:
           gitbook install
           gitbook build
       
-      - name: List Files in _book Directory
+      - name: Find Files with Target String
         run: |
-          echo "Listing files in _book directory:"
-          ls -l _book
+          target_string='<a class="btn pull-right js-toolbar-action" aria-label="" href="#"><i class="fa fa-twitter"></i></a>'
+          files_with_string=$(grep -rl "$target_string" _book)
+          echo "Files containing the target string:"
+          echo "$files_with_string"
+      
+          # Output content of files
+          for file in $files_with_string; do
+            echo "Content of $file:"
+            cat "$file"
+          done || true  # Continue even if cat fails (for empty files)
