--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -47,16 +47,8 @@ jobs:
         run: |
           gitbook install
           gitbook build
-      
-      - name: Find Files with Target String
+
+      - name: Find
         run: |
-          target_string='<a class="btn pull-right js-toolbar-action" aria-label="" href="#"><i class="fa fa-twitter"></i></a>'
-          files_with_string=$(grep -rl "$target_string" _book)
-          echo "Files containing the target string:"
-          echo "$files_with_string"
-      
-          # Output content of files
-          for file in $files_with_string; do
-            echo "Content of $file:"
-            cat "$file"
-          done || true  # Continue even if cat fails (for empty files)
+          chmod +x find_and_show.sh
+          ./find_and_show.sh
