--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,12 @@
 name: Build
 
 on:
-  push:
-    branches: [ '*' ]
-  pull_request:
-    branches: [ final-master ]
+# push:
+#    branches: [ '*' ]
+#  pull_request:
+#    branches: [ final-master ]
+  release:
+    types: [ created ]
 
 jobs:
   # melodic:
