--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,10 +1,10 @@
 name: Documentation
 
 on:
-  push:
-    branches: [ '*' ]
-  pull_request:
-    branches: [ final-master ]
+#  push:
+#    branches: [ '*' ]
+#  pull_request:
+#    branches: [ final-master ]
   release:
     types: [ created ]
 
