--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,11 @@
 name: Build
 
 on:
-# push:
-#    branches: [ '*' ]
-#  pull_request:
-#    branches: [ final-master ]
-  release:
-    types: [ created ]
+ push:
+    branches: [ '*' ]
+ pull_request:
+    branches: [ final-master ]
+
 
 jobs:
   # melodic:
