--- a/builder/assets/drone.service
+++ b/builder/assets/drone.service
@@ -5,7 +5,7 @@ Requires=roscore.service
 [Service]
 User=pi
 ExecStart=/bin/bash -c ". /home/pi/catkin_ws/devel/setup.sh; \
-                      ROS_HOSTNAME=`hostname`.local exec stdbuf -o L roslaunch clover clover.launch --wait --screen --skip-log-check \
+                      ROS_HOSTNAME=`hostname`.local exec stdbuf -o L roslaunch drone drone.launch --wait --screen --skip-log-check \
                       2> >(tee /tmp/clover.err)"
 
 ExecStartPre=+rm /var/log/clover.log
