--- a/drone/package.xml
+++ b/drone/package.xml
@@ -2,7 +2,7 @@
 <package format="3">
   <name>drone</name>
   <version>0.25.0</version>
-  <description>The Clover package</description>
+  <description>The Drone package</description>
 
   <maintainer email="okalachev@gmail.com">Oleg Kalachev</maintainer>
   <license>MIT</license>
